# Clipboard-Hub

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: Warnings.cmake
docs/: ARCHITECTURE.md  ROADMAP.md  SECURITY.md
include/chub/: clip.h  db.h  platform.h  transform.h  tui.h  util.h
scripts/: dev_smoke.ps1  gen_demo_gif.md
src/: clip.c  db.c  main.c  platform_win.c  transform.c  tui.c  util.c
